DR-2066 DR-2223 DR-2230 DR-2226 Add SAS access to Snapshot Parquet and Wire up DRS Url for Azure snapshots (#1112)
* WIP Commit...to refactor

* Add better messaging to when we don't have access to a bucket

* Add getcollectiontype to datasets and snapshots